clang/test/BSC/Positive/Trait/GenericTrait/impl_trait_for_undefine_type1/impl_trait_for_undefine_type1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s
// expected-no-diagnostics

_Trait F<T> {
};

_Impl _Trait F<int> for struct S;